--- a/test/_config.yml
+++ b/test/_config.yml
@@ -164,8 +164,11 @@ liquid:
   error_mode: strict
 
 # Conversion
-markdown: kramdown
 highlighter: rouge
+markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
 incremental: false
