--- a/_config.yml
+++ b/_config.yml
@@ -200,8 +200,11 @@ markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 
 # Conversion
-markdown: kramdown
 highlighter: rouge
+markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
 incremental: false
