Kind4SUS CTF - Cloud recipe

--- a/_config.yml
+++ b/_config.yml
@@ -336,3 +336,8 @@ collections:
   SwampCTF_2025:
     output: true
     permalink: /SwampCTF_2025/:title/
+
+collections:
+  Kind4SUS_CTF:
+    output: true
+    permalink: /Kind4SUS_CTF/:title/
